fix: modifying gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-bin/
-obj/
+**/bin/
+**/obj/
 
 *.user
 *.suo
 *.DotSettings.user
 
-project.assets.json
-project.nuget.cache
-project.packagespec.json
+**/project.assets.json
+**/project.nuget.cache
+**/project.packagespec.json
