--- a/GymManagement.Application/GymManagement.Application.csproj
+++ b/GymManagement.Application/GymManagement.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\GymManagement.Domain\GymManagement.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+    </ItemGroup>
+
 </Project>
