--- a/GymManagement.Application/GymManagement.Application.csproj
+++ b/GymManagement.Application/GymManagement.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
     </ItemGroup>
