--- a/GymManagement.Application/GymManagement.Application.csproj
+++ b/GymManagement.Application/GymManagement.Application.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="FluentValidation" Version="11.11.0" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
       <PackageReference Include="Throw" Version="1.4.0" />
