--- a/tests/TestCommon/TestCommon.csproj
+++ b/tests/TestCommon/TestCommon.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>TestCommon</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\GymManagement.Domain\GymManagement.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
