--- a/tests/TestCommon/TestCommon.csproj
+++ b/tests/TestCommon/TestCommon.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\GymManagement.Application\GymManagement.Application.csproj" />
       <ProjectReference Include="..\..\src\GymManagement.Domain\GymManagement.Domain.csproj" />
     </ItemGroup>
 
