--- a/src/GymManagement.Infrastructure/GymManagement.Infrastructure.csproj
+++ b/src/GymManagement.Infrastructure/GymManagement.Infrastructure.csproj
@@ -11,8 +11,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt" Version="1.0.0" />
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.8.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.8.0" />
     </ItemGroup>
 
 </Project>
